--- a/src/components/buttons/sign-in-button/sign-in-button.module.scss
+++ b/src/components/buttons/sign-in-button/sign-in-button.module.scss
@@ -4,7 +4,7 @@
   border-radius: var(--radius-small);
   padding: 0.4rem 0.8rem;
   background-color: var(--color-primary);
-  color: var(--color-white);
+  color: var(--color-secondary);
   font-weight: 700;
   border: none;
   text-align: center;
