--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -3,7 +3,7 @@
 .layout {
   @include common.mediaquery('desktop') {
     min-height: 100dvh;
-    margin-left: var(--header-width);
-    margin-right: calc(var(--header-width) - 6.5vw);
+    display: flex;
+    gap: 7vw;
   }
 }
