--- a/src/components/modals/confirmation-alert/confirmation-alert.module.scss
+++ b/src/components/modals/confirmation-alert/confirmation-alert.module.scss
@@ -1,7 +1,7 @@
 @use '/src/styles/common';
 
 .container {
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
   border-radius: var(--radius-medium);
   position: relative;
   display: flex;
