--- a/src/components/modals/stats-modal/stats-modal-item/stats-modal-item.module.scss
+++ b/src/components/modals/stats-modal/stats-modal-item/stats-modal-item.module.scss
@@ -19,7 +19,7 @@
 
   &:hover,
   &:focus {
-    background-color: var(--bg-secondary);
+    background-color: var(--color-secondary);
   }
 
   @include common.mediaquery('desktop') {
