--- a/src/components/modals/stats-modal/stats-modal.module.scss
+++ b/src/components/modals/stats-modal/stats-modal.module.scss
@@ -1,7 +1,7 @@
 @use '/src/styles/common';
 
 .container {
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
   padding: 1rem 0;
   width: clamp(25rem, 35vw, 32rem);
   border-radius: var(--radius-medium) var(--radius-medium) 0 0;
