--- a/src/components/pages/sign-in/sign-in.module.scss
+++ b/src/components/pages/sign-in/sign-in.module.scss
@@ -17,7 +17,7 @@
 }
 
 .info {
-  background-color: var(--bg-secondary);
+  background-color: var(--color-secondary);
   padding: 1rem 1.5rem;
   border-radius: var(--radius-small);
   line-height: 2;
