--- a/src/components/account-post/account-post.module.scss
+++ b/src/components/account-post/account-post.module.scss
@@ -12,7 +12,7 @@
   transition: box-shadow var(--transition);
 
   --shadow-size: 2px;
-  box-shadow: 0 0 0 calc(var(--shadow-size) * 2) var(--bg-secondary);
+  box-shadow: 0 0 0 calc(var(--shadow-size) * 2) var(--color-secondary);
 
   @include common.mediaquery('desktop') {
     &:focus {
@@ -29,7 +29,7 @@
 .image {
   width: 100%;
   height: 100%;
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
   object-fit: contain;
   opacity: 1;
   transition: opacity var(--transition);
@@ -53,7 +53,7 @@
   list-style: none;
   gap: 0.75rem;
   background-color: var(--color-gray-transparent);
-  color: var(--color-white);
+  color: var(--color-secondary);
   font-weight: 700;
   opacity: 0;
 
