--- a/src/components/buttons/button/button.module.scss
+++ b/src/components/buttons/button/button.module.scss
@@ -2,10 +2,10 @@
 
 .button {
   border-radius: var(--radius-small);
-  background-color: var(--color-primary);
-  color: var(--color-white);
-  font-weight: 700;
+  background-color: var(--color-secondary);
+  color: var(--color-text);
   border: none;
+  box-shadow: 0 0 2px var(--shadow-2);
   padding: 0.5rem 0.8rem;
   text-align: center;
   display: flex;
@@ -25,7 +25,7 @@
 
 .secondary {
   @extend .button;
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
   color: var(--color-primary);
   box-shadow: inset 0 0 0 2px var(--color-primary);
 
