--- a/src/components/chat-users-list/chat-users-list.module.scss
+++ b/src/components/chat-users-list/chat-users-list.module.scss
@@ -26,14 +26,14 @@
   align-items: center;
   gap: 1rem;
   border-radius: var(--radius-medium);
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
   padding: 0.5rem;
   width: 100%;
   transition: background-color var(--transition);
 
   &:hover,
   &:focus {
-    background-color: var(--bg-secondary);
+    background-color: var(--color-secondary);
   }
 
   &:focus {
