--- a/src/components/forms/comment-form/comment-form.module.scss
+++ b/src/components/forms/comment-form/comment-form.module.scss
@@ -15,9 +15,8 @@
   flex-grow: 1;
   border-radius: var(--radius-small);
   padding: 0.5rem;
-  border: var(--border-gray);
   transition: background-color var(--transition);
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
 
   &:hover,
   &:focus {
