--- a/src/components/home-post/home-post.module.scss
+++ b/src/components/home-post/home-post.module.scss
@@ -2,8 +2,8 @@
 
 .homePost {
   width: var(--post-width);
-
-  @include common.mediaquery('tablet') {
-    border-radius: var(--radius-medium);
-  }
+  background-color: var(--color-secondary);
+  padding: 1rem 0.75rem;
+  box-shadow: 0 1px 2px var(--shadow-2);
+  border-radius: var(--radius-medium);
 }
