--- a/src/components/input/input.module.scss
+++ b/src/components/input/input.module.scss
@@ -20,7 +20,7 @@
   transition: all var(--transition);
   transition-property: background-color, transform, opacity;
   display: inline-block;
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
   padding: 0 0.25rem;
   opacity: 0.8;
 }
@@ -31,16 +31,15 @@
 }
 
 .input {
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
   padding: 1rem;
   border-radius: var(--radius-small);
-  border: var(--border-gray);
 
   &:focus {
     outline: none;
     border-color: var(--color-primary);
 
-    & + .label {
+    &+.label {
       @extend %label-active;
     }
   }
@@ -49,12 +48,12 @@
 .inputError {
   border-color: var(--color-error);
 
-  & + .label {
+  &+.label {
     color: var(--color-error);
   }
 }
 
-.notEmpty + .label {
+.notEmpty+.label {
   @extend %label-active;
 }
 
