--- a/src/components/modals/list-modal/list-modal.module.scss
+++ b/src/components/modals/list-modal/list-modal.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
   width: clamp(20rem, 30vw, 40rem);
   padding: 1rem 1.5rem;
   border-radius: var(--radius-medium);
