--- a/src/components/new-post-notification/new-post-notification.module.scss
+++ b/src/components/new-post-notification/new-post-notification.module.scss
@@ -12,7 +12,7 @@
   border: none;
   box-shadow: var(--shadow-secondary);
   background-color: var(--color-primary);
-  color: var(--color-white);
+  color: var(--color-secondary);
   padding: 0.5rem 0.7rem;
   font-size: 1.25rem;
   display: flex;
