--- a/src/components/other-sign-in-options/other-sign-in-options.module.scss
+++ b/src/components/other-sign-in-options/other-sign-in-options.module.scss
@@ -1,7 +1,7 @@
 @use '/src/styles/common';
 
 .orWith {
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
   text-transform: uppercase;
   padding: 0 1rem;
   display: inline-block;
@@ -19,7 +19,7 @@
     content: '';
     width: 100%;
     height: 2px;
-    background-color: var(--bg-secondary);
+    background-color: var(--color-secondary);
     position: absolute;
     top: 50%;
     left: 0;
@@ -47,7 +47,7 @@
 }
 
 .button {
-  > button {
+  >button {
     display: flex;
     gap: 1rem;
     width: 100%;
@@ -58,7 +58,7 @@
 .link {
   border-radius: var(--radius-small);
   background-color: var(--color-primary);
-  color: var(--color-white);
+  color: var(--color-secondary);
   font-weight: 700;
   border: none;
   padding: 0.8rem;
