--- a/src/components/post/post-arrows/post-arrows.module.scss
+++ b/src/components/post/post-arrows/post-arrows.module.scss
@@ -8,7 +8,7 @@
   margin: auto 0;
   border: none;
   background-color: var(--color-primary);
-  color: var(--color-white);
+  color: var(--color-secondary);
   border-radius: 100%;
   display: flex;
   justify-content: center;
@@ -27,7 +27,7 @@
     box-shadow: var(--shadow-focus);
   }
 
-  > svg {
+  >svg {
     stroke-width: 3;
   }
 
