--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -23,7 +23,7 @@
 
 body {
   color: var(--text-black);
-  background-color: var(--bg-primary);
+  background-color: var(--color-primary);
   transition: background-color var(--transition);
 }
 
