--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,16 +1,19 @@
 @use '/src/styles/common';
 
 %variables {
-  --color-primary: rgb(240, 242, 245);
-  --color-secondary: rgb(255, 255, 255);
+  --color-primary: rgb(255, 255, 255);
+  --color-secondary: rgb(238, 240, 238);
+  --color-accent: rgb(81, 207, 176);
   --color-error: rgb(207, 60, 30);
-  --color-error-light: rgb(255, 175, 159);
+  --color-error-light: rgb(255, 202, 202);
   --color-gray: rgb(228, 230, 235);
   --color-gray-hover: rgb(204, 208, 213);
   --color-overlay: rgb(20, 20, 20, 0.6);
 
   --color-text: rgb(22, 22, 22);
   --color-text-gray: rgb(80, 80, 80);
+
+  --color-button-text: rgb(22, 22, 22);
 
   --transition: 0.25s ease;
   --transition-fast: 0.125s ease;
@@ -49,15 +52,19 @@
 %variablesDarkTheme {
   --color-primary: rgb(60, 60, 60);
   --color-secondary: rgb(80, 80, 80);
+  --color-accent: rgb(93, 182, 159);
   --color-gray: rgb(100, 100, 100);
   --color-gray-hover: rgb(130, 130, 130);
   --color-overlay: rgba(80, 80, 80, 0.85);
 
   --color-text: rgb(232, 232, 232);
-  --color-text-gray: rgb(190, 190, 190);
+  --color-text-gray: rgb(210, 210, 210);
 
   --shadow-1: rgba(255, 255, 255, 0.1);
   --shadow-2: rgba(255, 255, 255, 0.2);
   --shadow-5: rgba(255, 255, 255, 0.5);
   --shadow-8: rgba(255, 255, 255, 0.8);
+
+  --color-error-light: rgb(143, 95, 95);
+
 }
