--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -7,6 +7,7 @@
     border-radius: var(--radius-big);
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     margin: 3rem 5vw;
     padding: 2rem 1rem;
     width: var(--header-width);
