--- a/src/components/navbar/navbar-buttons/navbar-buttons.module.scss
+++ b/src/components/navbar/navbar-buttons/navbar-buttons.module.scss
@@ -5,20 +5,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1.5rem;
-  padding: 0.5rem 1rem;
-  background-color: var(--color-secondary);
-  border-radius: var(--radius-medium);
-  box-shadow: 0 0 2px var(--shadow-5);
+  gap: 1rem;
 
   @include common.mediaquery('desktop') {
     border-radius: 0;
     border: initial;
-    background-color: transparent;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-
     width: 100%;
     height: 100%;
     padding: 0;
@@ -30,34 +24,32 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
 
   @include common.mediaquery('desktop') {
     width: 100%;
+    padding: 0;
     display: block;
-
   }
 }
 
 .listItemContent {
   display: flex;
   align-items: center;
+  justify-content: center;
   border-radius: var(--radius-small);
-  gap: 0.5rem;
-  padding: 0.25rem;
+  gap: 1rem;
+  padding: 0.6rem;
   font-size: 1.25rem;
   transition: all var(--transition);
   transition-property: background-color, box-shadow;
 
-  svg {
-    width: 1.5rem;
-    height: 1.5rem;
-    stroke-width: 1.25;
-  }
-
   @include common.mediaquery('desktop') {
+    justify-content: flex-start;
     padding: 1rem 0.75rem;
     border-radius: var(--radius-medium);
     width: 100%;
+    height: auto;
 
     &:hover {
       background-color: var(--color-primary);
@@ -70,11 +62,8 @@
 }
 
 .active {
-  background-color: var(--color-primary);
-  font-weight: 700;
-
-  svg {
-    stroke-width: 2;
+  @include common.mediaquery('desktop') {
+    background-color: var(--color-primary);
   }
 }
 
