--- a/src/components/pages/chat-room/chat-room.module.scss
+++ b/src/components/pages/chat-room/chat-room.module.scss
@@ -4,14 +4,13 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  max-height: 100vh;
-  padding-bottom: 3rem;
-  --width: 100%;
-  margin: auto;
-  width: var(--width);
+  max-height: 90dvh;
+  min-height: 70dvh;
+  padding-bottom: 2rem;
+  width: 100%;
 
   @include common.mediaquery('desktop') {
-    --width: 55vw;
+    width: clamp(23rem, 50vw, 50rem);
     padding-bottom: 0;
   }
 }
@@ -21,14 +20,14 @@
   align-items: center;
   justify-content: center;
   gap: 1.5rem;
-  padding: 1rem;
+  margin-bottom: 2rem;
   background-color: var(--color-primary);
   width: var(--width);
-  position: fixed;
   top: 0;
   z-index: 1;
 
   @include common.mediaquery('desktop') {
+    margin-bottom: 0;
     padding: 1rem 3rem;
     gap: 3rem;
   }
@@ -70,13 +69,22 @@
   align-items: flex-start;
   justify-content: flex-start;
   list-style: none;
-  padding: 10rem 0.5rem;
   gap: 2rem;
+  max-height: 70dvh;
+  min-height: 50dvh;
+  overflow: auto;
+  padding: 0 1rem;
 
   @include common.mediaquery('desktop') {
+    padding: 0 2rem;
     gap: 3rem;
-    padding: 10rem 5rem;
   }
+}
+
+
+.time {
+  text-align: center;
+  width: 100%;
 }
 
 .noMessages {
@@ -99,65 +107,19 @@
   }
 }
 
-.formContainer {
-  position: fixed;
-  bottom: 3.5rem;
-  width: 100%;
-  padding: 1rem 0.5rem;
-  background-color: var(--color-primary);
-  display: flex;
-  justify-content: stretch;
-  align-items: stretch;
-
-  @include common.mediaquery('desktop') {
-    width: var(--width);
-    padding: 1rem 2rem;
-    justify-content: center;
-    bottom: 0;
-  }
-}
 
 .form {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   border-radius: var(--radius-small);
-  padding-right: 0.5rem;
-  background-color: var(--color-secondary);
-  border: 1px solid var(--color-gray);
   width: 100%;
+  gap: 1rem;
+  padding: 0 2rem;
+  margin-top: 1rem;
 
   @include common.mediaquery('desktop') {
-    padding-right: 1.5rem;
+    margin-top: 2rem;
     gap: 2rem;
-    width: 70%;
-    justify-content: center;
-  }
-}
-
-.input {
-  background-color: transparent;
-  padding: 0.7rem 0.5rem;
-  border: none;
-  flex-grow: 1;
-  max-width: 80%;
-
-  @include common.mediaquery('tablet') {
-    max-width: unset;
-    padding: 1rem 0.5rem;
-  }
-}
-
-.button {
-  color: var(--text-black);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  transition: opacity var(--transition);
-  padding: 0.3rem;
-
-  &:disabled {
-    opacity: 0.4;
   }
 }
