--- a/src/components/chat-message/chat-message.module.scss
+++ b/src/components/chat-message/chat-message.module.scss
@@ -2,58 +2,61 @@
 
 .message {
   display: flex;
+  flex-direction: row;
   align-items: center;
   margin-left: auto;
-  color: var(--color-icon-gray);
   position: relative;
-  word-break: break-all;
+  word-break: normal;
+  max-width: 90%;
+  gap: 0.5rem;
 
-  &>button {
-    order: 2;
+  @include common.mediaquery('desktop') {
+
+    &:hover>.options,
+    &:hover>.time {
+      opacity: 1;
+    }
   }
 }
 
+
+
 .time {
-  top: -1.1rem;
+  top: -1.25rem;
   left: unset;
-  right: 1.75rem;
+  right: 0.25rem;
   position: absolute;
   font-size: 0.75rem;
   text-align: right;
   width: 7rem;
   color: var(--text-black);
+  opacity: 0;
+  transition: opacity var(--transition);
 }
 
-.timeReceiver {
-  right: unset;
-  left: 0.5rem;
-  text-align: left;
-}
-
-.content {
-  background-color: var(--color-secondary);
-  border-radius: var(--radius-big);
-  padding: 0.35rem 0.5rem;
+.text {
+  background-color: var(--color-accent);
+  color: var(--color-button-text);
+  border-radius: var(--radius-medium);
+  padding: 0.5rem 1rem;
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  max-width: 10rem;
 
   @include common.mediaquery('desktop') {
     max-width: 20rem;
     padding: 0.5rem 1rem;
   }
+}
 
-  &>button {
-    order: 2;
-  }
+.options {
+  opacity: 0;
+  transition: opacity var(--transition);
 
-  &>figure {
-    order: 2;
-  }
-
-  svg {
-    color: var(--text-black);
+  @include common.mediaquery('desktop') {
+    &:focus {
+      opacity: 1;
+    }
   }
 }
 
@@ -61,25 +64,19 @@
   margin-left: 0;
   color: inherit;
 
-  &>.content {
+  &>.text {
     background-color: var(--color-secondary);
+    color: var(--color-text);
+
   }
 
-  &>button {
-    order: 0;
-  }
-}
-
-.contentReceiver {
-  &>button {
-    order: 0;
+  &>.avatar {
+    order: -1;
   }
 
-  &>figure {
-    order: 0;
+  &>.time {
+    right: unset;
+    left: 0.5rem;
+    text-align: left;
   }
-}
-
-.options {
-  color: var(--text-black);
 }
