--- a/src/components/chat-users-list/chat-users-list.module.scss
+++ b/src/components/chat-users-list/chat-users-list.module.scss
@@ -13,10 +13,21 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  overflow-y: auto;
+  max-height: 55dvh;
 
   @include common.mediaquery('desktop') {
     gap: 2rem;
+    max-height: 37rem;
+    padding: 0 1rem;
   }
+}
+
+.listItem {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .link {
@@ -31,19 +42,21 @@
   width: 100%;
   transition: background-color var(--transition);
 
-  &:hover,
-  &:focus {
-    background-color: var(--color-secondary);
-  }
-
-  &:focus {
-    outline: none;
-    box-shadow: var(--shadow-focus);
-  }
-
   @include common.mediaquery('desktop') {
-    width: auto;
-    gap: 2rem;
+    padding: 1rem;
+    gap: 1rem;
+    width: 80%;
+
+    &:hover,
+    &:focus {
+      background-color: var(--color-secondary);
+    }
+
+    &:focus {
+      outline: none;
+      box-shadow: var(--shadow-focus);
+    }
+
   }
 }
 
