--- a/src/components/loader/loader.module.scss
+++ b/src/components/loader/loader.module.scss
@@ -7,16 +7,11 @@
   justify-content: center;
   align-items: center;
   color: var(--color-primary);
-  --loader-size: 5rem;
 
   >svg {
     width: var(--loader-size);
     height: var(--loader-size);
     animation: rotate 1s infinite linear forwards;
-  }
-
-  @include common.mediaquery('desktop') {
-    --loader-size: 7rem;
   }
 }
 
@@ -42,12 +37,16 @@
   --loader-size: 1.5erem;
 }
 
-.white {
-  color: var(--color-secondary);
+.big {
+  --loader-size: 5rem;
 }
 
-.blue {
-  color: var(--color-primary);
+.primary {
+  color: var(--color-text);
+}
+
+.accent {
+  color: var(--color-accent);
 }
 
 .marginTop {
