--- a/src/components/modals/stats-modal/stats-modal.module.scss
+++ b/src/components/modals/stats-modal/stats-modal.module.scss
@@ -12,9 +12,16 @@
   }
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+  margin-bottom: 1rem;
+}
+
 .heading {
-  text-align: center;
-  padding-bottom: 1rem;
+  font-size: 1.5rem;
 }
 
 .list {
