--- a/src/components/navbar/navbar-buttons/navbar-buttons.module.scss
+++ b/src/components/navbar/navbar-buttons/navbar-buttons.module.scss
@@ -16,6 +16,7 @@
     width: 100%;
     height: 100%;
     padding: 0;
+    gap: 2rem;
     box-shadow: none;
   }
 }
@@ -64,6 +65,7 @@
 .active {
   @include common.mediaquery('desktop') {
     background-color: var(--color-primary);
+    font-weight: 700;
   }
 }
 
