--- a/src/components/pages/create-post/create-post.module.scss
+++ b/src/components/pages/create-post/create-post.module.scss
@@ -3,7 +3,7 @@
 .createPost {
   display: grid;
   width: clamp(19rem, 60vw, 55rem);
-  margin: 2rem auto;
+  margin: 0 auto;
   margin-bottom: 4rem;
   gap: 3rem;
 }
