--- a/src/components/post/post-arrows/post-arrows.module.scss
+++ b/src/components/post/post-arrows/post-arrows.module.scss
@@ -8,7 +8,7 @@
   margin: auto 0;
   border: none;
   background-color: var(--color-primary);
-  color: var(--color-secondary);
+  color: var(--color-text);
   border-radius: 100%;
   display: flex;
   justify-content: center;
@@ -21,17 +21,8 @@
   box-shadow: var(--shadow-primary);
   transition: box-shadow var(--transition-fast);
 
-  &:hover,
-  &:focus {
-    outline: none;
-    box-shadow: var(--shadow-focus);
-  }
-
-  >svg {
-    stroke-width: 3;
-  }
-
   @include common.mediaquery('desktop') {
+    --button-width: 3rem;
     left: 1rem;
     opacity: 1;
   }
